--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.9",
+    "@syncfusion/ej2-material-theme": "~27.1.57",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "ngx-cookie-service": "^18.0.0",
     "ngx-pagination": "^6.0.3",
